--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,6 +9,10 @@ a {
     color: black;
 }
 
+p, a {
+    font-family: "Avenir Next", sans-serif !important;
+}
+
 
 #logo {
     position: absolute;
@@ -29,7 +33,7 @@ a {
     display: flex;
     width: 100%;
     height: 114vh;
-    overflow: hidden;
+    overflow: scroll;
     position: absolute;
     z-index: -10;
     top: -166px;
@@ -50,13 +54,28 @@ a {
     background-color: rgba(255,255,255,0.7);
 }
 
+.text-container_center {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    padding-left: 5px;
+}
+
 .carousel-item_container_description {
-    padding-top: 50px;
     text-align: center;
+    width: 140px;
 }
 
 .carousel-item_container_image {
     width: 100%;
+}
+
+@media screen and (min-width: 1200px) {
+    .carousel-item_container_image {
+        width: 80%;
+    }
 }
 
 #footer {
@@ -70,7 +89,7 @@ a {
     background-color: white;
     color: black;
     text-align: center;
-    font-size: 30px;
+    font-size: 1.5em;
 }
 
 .contact {
