--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0;
+}
+
 ul {
     margin: 0;
     padding: 0;
@@ -18,9 +22,15 @@ p, a {
     position: absolute;
     width: 250px;
     height: 250px;
-    margin: 20px 0 0 20px;
+    margin: 80px 0 0 2vw;
     background-color: rgba(255,255,255,0.7);
     border-radius: 200px;
+}
+
+@media screen and (min-width: 75em) {
+    #logo {
+        margin: 70px 0 0 7vw;
+    }
 }
 
 .logo_midori {
@@ -36,8 +46,14 @@ p, a {
     overflow: scroll;
     position: absolute;
     z-index: -10;
-    top: -166px;
+    top: -115px;
     left: 0;
+}
+
+@media screen and (min-width: 75em) {
+    #carousel {
+        top: -155px;
+    }
 }
 
 .carousel-item_container {
@@ -72,9 +88,10 @@ p, a {
     width: 100%;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 75em) {
     .carousel-item_container_image {
-        width: 80%;
+        margin: 0 5vw;
+        width: 90%;
     }
 }
 
@@ -85,7 +102,7 @@ p, a {
     left: 0;
     bottom: 0;
     width: 100%;
-    height: 50px;
+    height: 55px;
     background-color: white;
     color: black;
     text-align: center;
@@ -93,11 +110,19 @@ p, a {
 }
 
 .contact {
+    padding-top: 10px;
     padding-left: 40vw;
 }
 
 .social {
+    padding-top: 5px;
     padding-right: 3vw;
+}
+
+@media screen and (min-width: 75em) {
+    .social {
+        padding-right: 6vw;
+    }
 }
 
 .social_item_instagram {
