--- a/styles/styles-mobile.css
+++ b/styles/styles-mobile.css
@@ -22,7 +22,7 @@ p, a {
     position: absolute;
     width: 225px;
     height: 225px;
-    margin: 60px 0 0 15px;
+    margin: 3vh 0 0 15px;
     background-color: rgba(255,255,255,0.7);
     border-radius: 200px;
 }
@@ -51,9 +51,9 @@ p, a {
 .text-container {
     position: relative;
     top: 85vh;
-    left: 58vw;
-    height: 150px;
-    width: 150px;
+    left: 55vw;
+    height: 135px;
+    width: 135px;
     border-radius: 200px;
     background-color: rgba(255,255,255,0.7);
 }
@@ -69,7 +69,7 @@ p, a {
 
 .carousel-item_container_description {
     text-align: center;
-    width: 140px;
+    width: 120px;
 }
 
 .carousel-item_container_image {
