--- a/styles/styles-mobile.css
+++ b/styles/styles-mobile.css
@@ -20,8 +20,8 @@ p, a {
 
 #logo {
     position: absolute;
-    width: 225px;
-    height: 225px;
+    width: 180px;
+    height: 180px;
     margin: 3vh 0 0 15px;
     background-color: rgba(255,255,255,0.7);
     border-radius: 200px;
@@ -30,7 +30,7 @@ p, a {
 .logo_midori {
     position: relative;
     width: 140%;
-    left: -42px;
+    left: -34px;
 }
 
 #carousel {
@@ -46,14 +46,15 @@ p, a {
 
 .carousel-item_container {
     width: 100vw;
+    overflow: hidden;
 }
 
 .text-container {
     position: relative;
-    top: 85vh;
-    left: 55vw;
-    height: 135px;
-    width: 135px;
+    top: 90vh;
+    left: 65vw;
+    height: 115px;
+    width: 115px;
     border-radius: 200px;
     background-color: rgba(255,255,255,0.7);
 }
@@ -69,12 +70,13 @@ p, a {
 
 .carousel-item_container_description {
     text-align: center;
-    width: 120px;
+    width: 100px;
+    font-size: 0.8em;
 }
 
 .carousel-item_container_image {
     height: 100vh;
-    object-position: -110vw 0px;
+    object-position: -125vw 0px;
 }
 
 #footer {
@@ -92,16 +94,12 @@ p, a {
 }
 
 .contact {
-    padding-top: 10px;
+    padding-top: 15px;
+    padding-left: 10px;
     font-size: 0.8em;
-}
-
-.social {
-    padding-top: 5px;
-    padding-right: 3vw;
 }
 
 .social_item_instagram {
     width: 35px;
-    padding-top: 5px;
+    padding-top: 13px;
 }
