--- a/styles/styles-mobile.css
+++ b/styles/styles-mobile.css
@@ -37,7 +37,7 @@ p, a {
     display: flex;
     width: 100%;
     height: 114vh;
-    overflow: scroll;
+    overflow: overlay;
     position: absolute;
     z-index: -10;
     top: -150px;
@@ -58,7 +58,7 @@ p, a {
 
 .text-container {
     position: relative;
-    top: 90vh;
+    top: 85vh;
     left: 65vw;
     height: 115px;
     width: 115px;
@@ -68,7 +68,7 @@ p, a {
 
 @media only screen and (orientation: landscape) {
     .text-container {
-        top: 80vh;
+        top: 75vh;
         left: 80vw;
     }
 }
@@ -118,6 +118,16 @@ p, a {
     padding-top: 15px;
     padding-left: 10px;
     font-size: 0.8em;
+}
+
+@media only screen and (orientation: landscape) {
+    #footer {
+        justify-content: center;
+    }
+
+    .contact {
+        padding-right: 20px;
+    }
 }
 
 .social_item_instagram {
