--- a/styles/styles-mobile.css
+++ b/styles/styles-mobile.css
@@ -68,7 +68,7 @@ p, a {
 
 @media only screen and (orientation: landscape) {
     .text-container {
-        top: 75vh;
+        top: 72vh;
         left: 80vw;
     }
 }
@@ -122,11 +122,15 @@ p, a {
 
 @media only screen and (orientation: landscape) {
     #footer {
-        justify-content: center;
+        justify-content: space-between;
     }
 
     .contact {
-        padding-right: 20px;
+        padding-left: 30vw;
+    }
+
+    .social {
+        padding-right: 3vw;
     }
 }
 
